--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
 <title> This should be a website!</title>
-<h1> +Header Tag+ </h1>	
+<h1> ---+Header Tag+ </h1>	
 <p> This is a paragraph tag!</p>
 </html>
